# TP4CPP

./: .cproject  .project  CMakeLists.txt  ErrorCode.h  Intersection.cpp  Intersection.h  MultiPoly.cpp  MultiPoly.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Segment.cpp  Segment.h  Shape.cpp  Shape.h  ShapeHandler.cpp  ShapeHandler.h  TODO List  Union.cpp  Union.h  lol.txt  main.cpp  makefile
B3129/: B3129
B3129/src/: ErrorCode.h  Intersection.cpp  Intersection.h  MultiPoly.h  Point.cpp  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Segment.cpp  Shape.h  ShapeHandler.h  Union.cpp  makefile
B3129/tests/: test.sh
B3129/tests/testFile/: BigPolyReg0.1withUnion.out  BigPolyReg0.out  BigPolyReg1.out  BigPolyReg2SaveFile.out  BigPolyReg5Total_GenerateSaveClearLoadAndHits.out  HitPoly1.in  HitPoly1.out  HitSeg1.in  UndoRedo0.in  UndoRedo0.out  testFILE.txt
B3129/tests/testFile/output/: out8
Debug/: makefile  subdir.mk
Release/: subdir.mk
UML/: .directory  .~lock.CDC.odt#  CDC.odt  ClassDiagram.dia  TESTS.odt
doc/: ClassDiagram.dia  Conception.odt  cdc.tex  conception.tex  perf.odt  perf.tex  rendu.tex
tests/: makefile  result.txt  result.txt~  result2.txt  test.sh  test.sh~
tests/testFile/: BadPoly1.in  BadPoly1.out  BigPolyReg3LoadFile.in  DeleteSeg1.in  DeleteSeg1.out  HitOI1.in  HitOI1.out  HitOR1.in  HitOR1.in~  HitPoly1.in  HitPolyRect0.in  HitRect0.in  HitSeg1.in  Move0.in  Move0.out  SaveLoadClear1.in  SaveLoadClear1.out  UndoRedo0.in  test1.in
tests/testFile/output/: out1  out10  out3  out4  out5  out6
